# ethercat-plc

./: Cargo.toml  README.md
ethercat-derive/: Cargo.toml
ethercat-derive/src/: lib.rs
ethercat-plc/: Cargo.toml
ethercat-plc/src/: beckhoff.rs  image.rs  lib.rs  mlz_spec.rs  plc.rs  server.rs
src/: demo.rs  io_demo.rs  magnet_demo.rs
