[workspace]

[package]
name = "ethercat-testplc"
version = "0.1.4"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2021"

[[bin]]
name = "magnet_demo"
path = "src/magnet_demo.rs"

[[bin]]
name = "io_demo"
path = "src/io_demo.rs"

[dependencies]
byteorder = "1.3"
ethercat = "0.3.0"
ethercat-plc = { path = "ethercat-plc" }
ethercat-derive = { path = "ethercat-derive" }
