[package]
name = "ethercat-derive"
description = "Automatic deriving of traits in the ethercat-plc crate"
version = "0.2.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
